--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/fragment1"
-        android:name="com.example.foodtwo.Fragment1"
+        android:name="com.example.foodtwo.MVVM.ui.homeFragment.HomeFragment"
         android:label="fragment_1"
         tools:layout="@layout/fragment_1" >
         <action
