--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -111,7 +111,7 @@
            app:layout_constraintVertical_bias="0.31">
 
            <EditText
-               android:id="@+id/outlinedTextField1"
+               android:id="@+id/search"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="40dp"
@@ -279,6 +279,7 @@
 <LinearLayout
     android:layout_width="wrap_content"
     android:orientation="vertical"
+    android:id="@+id/neerme_cardview"
     android:layout_marginStart="16dp"
     android:layout_height="match_parent">
     <ImageView
@@ -300,6 +301,7 @@
 
 </LinearLayout>
                        <LinearLayout
+                           android:id="@+id/popular_cardview"
                            android:layout_width="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="16dp"
@@ -419,7 +421,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/seeall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
